k8s/projects/2-microservice-project/deployment-ms1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms1
  template:
    metadata:
      labels:
        app: ms1
    spec:
      containers:
      - name: ms1
        image: prashantdey/microservicenode:ms1
        ports:
        - containerPort: 3000
