k8s/projects/2-microservice-project/deployment-ms3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms3-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms3
  template:
    metadata:
      labels:
        app: ms3
    spec:
      containers:
      - name: ms3
        image: prashantdey/microservicenode:ms3
        ports:
        - containerPort: 3002
