k8s/projects/2-microservice-project/service-ms1.yml
apiVersion: v1
kind: Service
metadata:
  name: ms1-service
spec:
  selector:
    app: ms1
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3000
  type: ClusterIP
