k8s/projects/2-microservice-project/service-ms3.yml
apiVersion: v1
kind: Service
metadata:
  name: ms3-service
spec:
  selector:
    app: ms3
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3002
  type: ClusterIP
