k8s/projects/2-microservice-project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /ms1
        pathType: Prefix
        backend:
          service:
            name: ms1-service
            port:
              number: 3005
      - path: /ms2
        pathType: Prefix
        backend:
          service:
            name: ms2-service
            port:
              number: 3005
      - path: /ms3
        pathType: Prefix
        backend:
          service:
            name: ms3-service
            port:
              number: 3005
